# willand_robot

./: .gitignore  .gitmodules  compile_commands.json
.cache/clangd/index/: Compat.hpp.3807189B06E19BEC.idx  Constants.hpp.9E30F3606D8F8364.idx  Data.cpp.737D12DB940A0747.idx  Data.hpp.ABE236845F7AFA50.idx  Data.tpp.C52A8DA02FCE7098.idx  Debug.cpp.6207DDA8DB26353E.idx  Debug.hpp.39E6E0A1FE61D52E.idx  OsqpEigen.h.A9412B78ADAE315A.idx  Settings.cpp.2738435D32BBD806.idx  Settings.hpp.1B223B4B874C61E7.idx  Solver.cpp.B0DA0B04AA4CF9AC.idx  Solver.hpp.C554578D8DA2D378.idx  Solver.tpp.1EFC5258166C207C.idx  SparseMatrixHelper.hpp.CD9187E9C8D3C14C.idx  SparseMatrixHelper.tpp.63C903FDDB25A6FE.idx  SuiteSparse_config.c.F58F626C1503065F.idx  SuiteSparse_config.h.6FDD68AE523ABAFA.idx  algebra_impl.h.3DA7FEDB8DEC04BF.idx  algebra_libs.c.F29E7E39F858F2DF.idx  algebra_matrix.h.370B5B3388ED4F1B.idx  algebra_vector.h.32C9FF017E8D0B77.idx  amd.h.82BBBFC557C3AD1E.idx  amd_1.c.3C810E3DDC860F74.idx  amd_2.c.9600B57DBC57F66B.idx  amd_aat.c.452F5161684F0312.idx  amd_control.c.3BA985B1B18B3B6A.idx  amd_defaults.c.EE5D18D9045858F4.idx  amd_info.c.4C28FC943F76821C.idx  amd_internal.h.F0AFA420D188323E.idx  amd_order.c.96B3E784B9F85DDE.idx  amd_post_tree.c.2B46FADB0294AC76.idx  amd_postorder.c.0B9ADA5C22D181F4.idx  amd_preprocess.c.3195778B213C13D8.idx  amd_valid.c.4743953E7D5CED06.idx  auxil.c.5A07BD5DC0D09792.idx  auxil.h.891E64E07BA6ED4C.idx  codegen.c.4733DFB9D95B2641.idx  codegen.h.B5099BB263D46423.idx  csc_math.c.7E10D226F832D27B.idx  csc_math.h.325251B922C48163.idx  (+44 more)
.clangd/index/: path_generator.h.76CD255977665DB1.idx  tracking_server.h.DE754D7568F8D9E8.idx  traj_tracking_gazebo.cpp.4CFBF4201FA3C48D.idx  trajectory_tracker.cpp.D6884DA04715F3CF.idx  trajectory_tracker.h.2B83C8E549091F1D.idx
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: four_wheel_drive.pc
devel/share/four_wheel_drive/cmake/: four_wheel_driveConfig.cmake
src/four_wheel_drive/: CMakeLists.txt
src/four_wheel_drive/launch/: visualize_robot.launch
src/four_wheel_drive/launch/config/: four_wheel_drive.rviz  robot_joint.yaml
src/four_wheel_drive/robot_model/xacro/: smartcar.urdf  smartcar.xacro  smartcar_body.xacro  smartcar_sim.xacro
src/traj_tracking/: CMakeLists.txt
src/traj_tracking/docs/: derivation.md
src/traj_tracking/include/: mpc_tracker.h  path_generator.h  tracking_server.h  trajectory_tracker.h
src/traj_tracking/launch/: traj_tracking.launch
src/traj_tracking/proto/: tracking_data.proto
src/traj_tracking/script/: visualize_tracking.ipynb
src/traj_tracking/src/: example.cpp  mpc_tracker.cpp  traj_tracking_sim.cpp  trajectory_tracker.cpp
